--- a/handwriting_recognition.ipynb
+++ b/handwriting_recognition.ipynb
@@ -105,18 +105,20 @@
    "execution_count": 28,
    "outputs": [],
    "source": [
-    "model = tf.keras.Sequential([\n",
-    "    tf.keras.layers.Conv2D(64, kernel_size=(3, 3), activation=tf.nn.relu, input_shape=(28, 28, 1)),\n",
-    "    tf.keras.layers.MaxPool2D(pool_size=(2, 2)),\n",
-    "    tf.keras.layers.Conv2D(32, kernel_size=(3, 3), activation=tf.nn.relu, input_shape=(28, 28, 1)),\n",
-    "    tf.keras.layers.MaxPool2D(pool_size=(2, 2)),\n",
-    "    tf.keras.layers.Conv2D(16, kernel_size=(3, 3), activation=tf.nn.relu, input_shape=(28, 28, 1)),\n",
-    "    tf.keras.layers.MaxPool2D(pool_size=(2, 2)),\n",
-    "    tf.keras.layers.Flatten(),\n",
-    "    tf.keras.layers.Dense(512, activation=tf.nn.relu),\n",
-    "    tf.keras.layers.Dense(256, activation=tf.nn.relu),\n",
-    "    tf.keras.layers.Dense(128, activation=tf.nn.relu),\n",
-    "    tf.keras.layers.Dense(10, activation=tf.nn.softmax)]\n",
+    "model = tf.keras.Sequential(\n",
+    "    [\n",
+    "        tf.keras.layers.Conv2D(64, kernel_size=(3, 3), activation=tf.nn.relu, input_shape=(28, 28, 1)),\n",
+    "        tf.keras.layers.MaxPool2D(pool_size=(2, 2)),\n",
+    "        tf.keras.layers.Conv2D(32, kernel_size=(3, 3), activation=tf.nn.relu, input_shape=(28, 28, 1)),\n",
+    "        tf.keras.layers.MaxPool2D(pool_size=(2, 2)),\n",
+    "        tf.keras.layers.Conv2D(16, kernel_size=(3, 3), activation=tf.nn.relu, input_shape=(28, 28, 1)),\n",
+    "        tf.keras.layers.MaxPool2D(pool_size=(2, 2)),\n",
+    "        tf.keras.layers.Flatten(),\n",
+    "        tf.keras.layers.Dense(512, activation=tf.nn.relu),\n",
+    "        tf.keras.layers.Dense(256, activation=tf.nn.relu),\n",
+    "        tf.keras.layers.Dense(128, activation=tf.nn.relu),\n",
+    "        tf.keras.layers.Dense(10, activation=tf.nn.softmax)\n",
+    "    ]\n",
     ")"
    ],
    "metadata": {
@@ -230,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 38,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -239,8 +241,8 @@
     "id": "XBWdF5UlKdlA",
     "outputId": "7108c13b-3544-479e-b566-e1a115ec1299",
     "ExecuteTime": {
-     "end_time": "2023-07-26T14:15:18.581118400Z",
-     "start_time": "2023-07-26T14:15:15.296554200Z"
+     "end_time": "2023-07-26T17:23:27.475578400Z",
+     "start_time": "2023-07-26T17:23:24.011930800Z"
     }
    },
    "outputs": [
@@ -248,7 +250,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "313/313 [==============================] - 3s 8ms/step\n",
+      "313/313 [==============================] - 2s 7ms/step\n",
       "The predicted number is  5\n"
      ]
     },
